<resources>
    <string name="app_name">MangoSweets</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="our_special_cakes">"<u> What makes our Mango Cakes extra special? We use real,
        sweet Philippine mangoes and we now have MORE REAL MANGOES
        in every layer of the cake </u>.</string>
    <string name="uri">https://www.facebook.com/CakeShopEgypt</string>
    <string name="hours"> "<u> We are open all week from 11 am to 1 am except Friday and Saturday </u> ...</string>
    <string name="to_be_contact">"<u>To be contact</u></string>
    <string name="mango_cakes"> "<u> MANGO CAKES </u></string>

</resources>
