<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/m"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image1"
        android:layout_width="360dp"
        android:layout_height="224dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/phlipini"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text1"

        />

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:text="@string/mango_cakes"
        android:gravity="center"
        android:textStyle="bold|italic"
        android:textSize="36sp"
        android:layout_marginStart="16dp"
        android:textColor="#FFFFFF"

        />
    <LinearLayout
        android:id="@+id/ln1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image1"
        android:layout_marginTop="8dp"
        android:padding="8dp"

        >

        <ImageView

            android:layout_width="96dp"
            android:layout_height="96dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ccc"
            android:layout_weight="1"
            />

        <ImageView
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:scaleType="centerCrop"
            android:src="@drawable/cakennnn"
            android:layout_weight="1"
            />
        <ImageView
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:scaleType="centerCrop"
            android:src="@drawable/cakelll"
            android:layout_weight="1"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ln1"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/our_special_cakes"
            android:textStyle="bold|italic"
            android:textSize="16sp"
            android:textColor="@android:color/primary_text_dark"
            android:paddingStart="16dp"
            android:paddingEnd="8dp"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_be_contact"
            android:textStyle="bold|italic"
            android:textSize="16sp"
            android:textColor="@android:color/holo_red_dark"
            android:paddingStart="16dp"

            />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_call"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="phone"
                android:text="01033729354"
                android:textStyle="bold|italic"
                android:textSize="16sp"
                android:paddingStart="16dp"
                android:textColor="#00BCD4"


                />



        </LinearLayout>

        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_facebook"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:text="@string/uri"
                android:textStyle="bold|italic"
                android:textSize="16sp"
                android:paddingStart="16dp"

                android:textColor="@android:color/holo_blue_bright"

                />



        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hours"
            android:paddingStart="16dp"
            android:paddingEnd="8dp"
            android:textSize="16dp"
            android:textColor="@android:color/primary_text_dark"
            android:textStyle="bold|italic"

            />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
